Mejorando el estilo

--- a/angularapp/src/app/modules/test-psicologico/components/realizar-test/realizar-test.component.html
+++ b/angularapp/src/app/modules/test-psicologico/components/realizar-test/realizar-test.component.html
@@ -1,4 +1,150 @@
-<p>realizar-test works!</p>
-hola
-holas
-<button (click)="goToLogin()">hola</button>
+<section class="overflow-y-auto b h-full">
+  <header class="bg-white py-8 px-10">
+    <a class="text-sm font-semibold text-h1.2"> User Interface </a>
+    <h1 class="text-4xl font-bold   text-h1">Typography</h1>
+  </header>
+
+  <body>
+    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+    <p class="lead">
+      Until now, trying to style an article, document, or blog post with
+      Tailwind has been a tedious task that required a keen eye for typography
+      and a lot of complex custom CSS.
+    </p>
+  </body>
+</section>
