--- a/angularapp/src/app/modules/modules.component.html
+++ b/angularapp/src/app/modules/modules.component.html
@@ -1,3 +1,7 @@
-
-<app-header></app-header>
-<router-outlet></router-outlet>
+<section class="A1 flex">
+  <app-barra-lateral></app-barra-lateral>
+  <!-- Inicio del Area Home -->
+  <section class="home">
+    <router-outlet></router-outlet>
+  </section>
+</section>
