--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -1,7 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
-body { margin: 0; }
+*{
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
+:root{
+  /* ==== Color ====*/
+  --body-color: #f1f5f9;
+
+  /* === transition === */
+  --tran-02: all 0.2s ease;
+  --tran-03: all 0.3s ease;
+  --tran-04: all 0.4s ease;
+  --tran-05: all 0.5s ease;
+
+}
+body{
+  background-color: var(--body-color);
+  transition: var(--tran-05);
+}
