--- a/angularapp/src/app/modules/test-psicologico/components/realizar-test/realizar-test.component.html
+++ b/angularapp/src/app/modules/test-psicologico/components/realizar-test/realizar-test.component.html
@@ -1,4 +1,10 @@
-<section class="overflow-y-auto b h-full">
+
+
+
+<section class="w-{400px}">
+  hola
+</section>
+<section class="w-{800px} overflow-y-auto ">
   <header class="bg-white py-8 px-10">
     <a class="text-sm font-semibold text-h1.2"> User Interface </a>
     <h1 class="text-4xl font-bold   text-h1">Typography</h1>
