--- a/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.html
+++ b/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.html
@@ -1,107 +1,101 @@
+<!-- Inicio del Area Sidebar -->
+<section class="sidebar p-4 cursor-default">
+  <!-- Logo de Pagina-->
 
-  <!-- Inicio del Area Sidebar -->
-  <section class="sidebar p-4 cursor-default">
-    <!-- Logo de Pagina-->
-
-    <div class="p-4">
-      <div class="mx-auto cover rounded-full"></div>
-      <div class="prose text-slate-300 text-3xl font-semibold text-center pt-3">
-        Oido Amigo
-      </div>
+  <div class="p-4">
+    <div class="mx-auto cover rounded-full"></div>
+    <div class="prose text-slate-300 text-3xl font-semibold text-center pt-3">
+      Psicometría
     </div>
+  </div>
 
-    <!-- Fin de Logo de Pagina-->
+  <!-- Fin de Logo de Pagina-->
 
-    <div class=" prose px-4 text-violet-500 text-base ">
-      DASHBOARDS
-    </div>
-    <div class="font-serif px-4 text-sm text-slate-500 mb-3">
-      Unique dashboard designs
-    </div>
+  <div class="prose px-4 text-violet-500 text-base">Panel</div>
 
-    <!-- Inicio de boton de seleccion-->
-    <div
-      class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+  <!-- Inicio de boton de seleccion-->
+  <div
+    class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-6 w-6"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+      stroke-width="2"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-        stroke-width="2"
-      >
-        <path d="M12 14l9-5-9-5-9 5 9 5z" />
-        <path
-          d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
-        />
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
-        />
-      </svg>
-      <div class="mx-6 w-auto font-semibold">Materias</div>
-    </div>
-    <!-- Fin de boton de seleccion-->
+      <path d="M12 14l9-5-9-5-9 5 9 5z" />
+      <path
+        d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+      />
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+      />
+    </svg>
+    <div class="mx-6 w-auto font-semibold">Materias</div>
+  </div>
+  <!-- Fin de boton de seleccion-->
 
-    <div
-      class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+  <div
+    class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-6 w-6"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+      stroke-width="2"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-        stroke-width="2"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
-        />
-      </svg>
-      <div class="mx-6 w-auto font-semibold">Tarjetas</div>
-    </div>
-    <div
-      class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
+      />
+    </svg>
+    <div class="mx-6 w-auto font-semibold">Tarjetas</div>
+  </div>
+  <div
+    class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-6 w-6"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+      stroke-width="2"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-        stroke-width="2"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"
-        />
-      </svg>
-      <div class="mx-6 w-auto font-semibold">Listas</div>
-    </div>
-    <div
-      class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"
+      />
+    </svg>
+    <div class="mx-6 w-auto font-semibold">Listas</div>
+  </div>
+  <div
+    class="h-9 my-2 px-4 cursor-pointer bg-transparent hover:bg-slate-800 text-slate-400 hover:text-white border-transparent hover:border-transparent rounded flex items-center"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-6 w-6"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+      stroke-width="2"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-        stroke-width="2"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
-        />
-      </svg>
-      <div class="mx-6 w-auto font-semibold">Oportunidades</div>
-    </div>
-    <!-- Fin de los botones -->
-  </section>
-  <!-- Fin del Area Sidebar-->
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+      />
+    </svg>
+    <div class="mx-6 w-auto font-semibold">Oportunidades</div>
+  </div>
+  <!-- Fin de los botones -->
+</section>
+<!-- Fin del Area Sidebar-->
