--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -2,12 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-  margin: 0;
-  padding:0;
-  box-sizing: border-box;
-}
-:root{
+:root {
+  font-family: "Inter", sans-serif;
+
   /* ==== Color ====*/
   --body-color: #f1f5f9;
 
@@ -16,9 +13,13 @@
   --tran-03: all 0.3s ease;
   --tran-04: all 0.4s ease;
   --tran-05: all 0.5s ease;
-
 }
-body{
+body {
   background-color: var(--body-color);
   transition: var(--tran-05);
+}
+
+html,
+body {
+  height: 100%;
 }
