--- a/angularapp/src/app/modules/shared/components/modal/modal.component.html
+++ b/angularapp/src/app/modules/shared/components/modal/modal.component.html
@@ -1,4 +1,7 @@
-
-<div class="animate-spin inline-block w-8 h-8 border-[3px] border-current border-t-transparent text-blue-600 rounded-full" role="status" aria-label="loading">
+<div
+  class="animate-spin inline-block w-8 h-8 border-[3px] border-current border-t-transparent text-blue-600 rounded-full"
+  role="status"
+  aria-label="loading"
+>
   <span class="sr-only">Loading...</span>
 </div>
