--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -2,24 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  *,
+  ::after,
+  ::before {
+    border-style: none;
+  }
+}
 :root {
   font-family: "Inter", sans-serif;
 
-  /* ==== Color ====*/
   --body-color: #f1f5f9;
-
-  /* === transition === */
-  --tran-02: all 0.2s ease;
-  --tran-03: all 0.3s ease;
-  --tran-04: all 0.4s ease;
-  --tran-05: all 0.5s ease;
 }
 body {
   background-color: var(--body-color);
-  transition: var(--tran-05);
 }
 
 html,
 body {
   height: 100%;
+}
+details > summary {
+  list-style: none;
+}
+details > summary::-webkit-details-marker {
+  display: none;
 }
