--- a/angularapp/src/app/modules/modules.component.html
+++ b/angularapp/src/app/modules/modules.component.html
@@ -1,7 +1,6 @@
 <section class="A1 flex">
   <app-barra-lateral></app-barra-lateral>
-  <!-- Inicio del Area Home -->
-  <section class="home">
+  <section class="home h-screen">
     <router-outlet></router-outlet>
   </section>
 </section>
