--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -33,3 +33,23 @@ details > summary {
 details > summary::-webkit-details-marker {
   display: none;
 }
+table {
+  @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
+}
+thead {
+  @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
+}
+th {
+  @apply px-6 py-3;
+}
+tbody > tr {
+  @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700;
+}
+
+tbody > tr > th {
+  @apply px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white;
+}
+
+td {
+  @apply px-6 py-4;
+}
