--- a/angularapp/src/app/modules/evaluar-salones/components/evaluar-salones-menu/evaluar-salones-menu.component.html
+++ b/angularapp/src/app/modules/evaluar-salones/components/evaluar-salones-menu/evaluar-salones-menu.component.html
@@ -1,5 +1,8 @@
-<div class="map-container">
-    <div class="map-frame">
-      <div id="map"></div>
-    </div>
+<div class="absolute inset-0 flex flex-col">
+  <div class="border h-full">
+    <div class="h-full" id="map"></div>
   </div>
+  <div class="py-2 bg-indigo-600 text-white">
+    Distancia Dibujada {{ totalDistance }}m
+  </div>
+</div>
