--- a/angularapp/src/app/modules/test-psicologico/components/resultados-test/resultados-test.component.html
+++ b/angularapp/src/app/modules/test-psicologico/components/resultados-test/resultados-test.component.html
@@ -21,7 +21,7 @@
                 [value]="i"
                 *ngFor="let unity of unities; let i = index"
               >
-                {{ unity.name }}
+                {{ unity.nombre }}
               </mat-option>
             </mat-select>
           </mat-form-field>
