--- a/angularapp/src/app/modules/evaluar-salones/components/evaluar-salones-menu/evaluar-salones-menu.component.html
+++ b/angularapp/src/app/modules/evaluar-salones/components/evaluar-salones-menu/evaluar-salones-menu.component.html
@@ -3,6 +3,6 @@
     <div class="h-full" id="map"></div>
   </div>
   <div class="py-2 bg-indigo-600 text-white">
-    Distancia Dibujada {{ totalDistance }}m
+    Distancia Dibujada {{ (totalDistance/1000).toFixed(2) }}km
   </div>
 </div>
