Frontend pequeños arreglos visuales

--- a/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.html
+++ b/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.html
@@ -1,8 +1,8 @@
 <section class="sidebar p-4 cursor-default">
   <div class="p-4">
     <div class="mx-auto cover rounded-full"></div>
-    <div class="prose text-slate-300 text-3xl font-semibold text-center pt-3">
-      Psicometría
+    <div class="prose text-slate-300 text-2xl font-semibold text-center pt-3">
+      Prof. Paredes Contreras, Wilber
     </div>
   </div>
 
