--- a/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.css
+++ b/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.css
@@ -6,7 +6,7 @@
 .cover {
   height: 130px;
   width: 130px;
-  background-image: url("src/assets/img/logo1.svg");
+  background-image: url("src/assets/img/icono-perfil.png");
   background-size: cover;
   background-position: center;
 }
