--- a/angularapp/src/app/modules/login/components/main/main.component.html
+++ b/angularapp/src/app/modules/login/components/main/main.component.html
@@ -1,31 +1,17 @@
 <div class="bg-white dark:bg-gray-900">
   <div class="flex justify-center h-screen">
-    <div
-      class="hidden bg-cover lg:block lg:w-2/3"
-      style="
-        background-image: url(https://images.unsplash.com/photo-1616763355603-9755a640a287?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
-      "
-    >
-      <div class="flex items-center h-full px-20 bg-gray-900 bg-opacity-40">
-        <div>
-          <h2 class="text-2xl font-bold text-white sm:text-3xl">Meraki UI</h2>
-
-          <p class="max-w-xl mt-3 text-gray-300">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In autem
-            ipsa, nulla laboriosam dolores, repellendus perferendis libero
-            suscipit nam temporibus molestiae
-          </p>
-        </div>
-      </div>
-    </div>
-
+    <img
+      class="hidden bg-cover lg:block lg:w-2/3 py-16 pe-20 ps-36"
+      src="assets/img/estudiantes-profesores.png"
+      alt=""
+    />
     <div class="flex items-center w-full max-w-md px-6 mx-auto lg:w-2/6">
       <div class="flex-1">
         <div class="text-center">
           <div class="flex justify-center mx-auto">
             <img
               class="w-auto h-7 sm:h-8"
-              src="https://merakiui.com/images/logo.svg"
+              src="assets/img/IE-San-Luis-Maria-1218.png"
               alt=""
             />
           </div>
@@ -41,13 +27,13 @@
               <label
                 for="usuario"
                 class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
-                >Usuario</label
+                >DNI</label
               >
               <input
                 id="username"
                 formControlName="username"
                 type="text"
-                placeholder="Ingrese su usuario"
+                placeholder="Ingrese su DNI"
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
               />
             </div>
