--- a/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.html
+++ b/angularapp/src/app/core/main-page/barra-lateral/barra-lateral.component.html
@@ -2,7 +2,7 @@
   <div class="p-4">
     <div class="mx-auto cover rounded-full"></div>
     <div class="prose text-slate-300 text-2xl font-semibold text-center pt-3">
-      Prof. Paredes Contreras, Wilber
+      {{ fullName }}
     </div>
   </div>
 
