--- a/angularapp/src/app/modules/login/components/main/main.component.html
+++ b/angularapp/src/app/modules/login/components/main/main.component.html
@@ -1,71 +1,57 @@
-<div class="bg-white dark:bg-gray-900">
-  <div class="flex justify-center h-screen">
-    <img
-      class="hidden bg-cover lg:block lg:w-2/3 py-16 pe-20 ps-36"
-      src="assets/img/estudiantes-profesores.png"
-      alt=""
-    />
-    <div class="flex items-center w-full max-w-md px-6 mx-auto lg:w-2/6">
-      <div class="flex-1">
-        <div class="text-center">
-          <div class="flex justify-center mx-auto">
-            <img
-              class="w-auto h-7 sm:h-8"
-              src="assets/img/IE-San-Luis-Maria-1218.png"
-              alt=""
-            />
-          </div>
+<div class="bg-white dark:bg-gray-900 h-screen">
+  <div class="flex items-center h-full">
+    <div class="w-full h-full p-16">
+      <img
+        class="h-full w-full object-cover rounded-tl-lg rounded-br-lg"
+        src="assets/img/estudiantes-profesores.png"
+        alt=""
+      />
+    </div>
+    <div class="flex flex-col gap-4 items-center w-full max-w-lg px-24">
+      <div class="flex flex-col gap-2 items-center">
+        <img
+          class="w-32 h-auto object-contain"
+          src="assets/img/IE-San-Luis-Maria-1218.png"
+        />
 
-          <p class="mt-3 text-gray-500 dark:text-gray-300">
-            Inicia sesión para acceder a tu cuenta
-          </p>
-        </div>
+        <p class="text-xs text-gray-500 dark:text-gray-300">
+          Inicia sesión para acceder a tu cuenta
+        </p>
+      </div>
 
-        <div class="mt-8">
-          <form [formGroup]="formRegistro">
-            <div>
-              <label
-                for="usuario"
-                class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
-                >DNI</label
-              >
+      <div class="w-full">
+        <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+          <div class="flex flex-col">
+            <mat-form-field appearance="outline">
+              <mat-label>DNI</mat-label>
               <input
-                id="username"
+                matInput
                 formControlName="username"
                 type="text"
-                placeholder="Ingrese su DNI"
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
               />
-            </div>
+            </mat-form-field>
 
-            <div class="mt-6">
-              <div class="flex justify-between mb-2">
-                <label
-                  for="password"
-                  class="text-sm text-gray-600 dark:text-gray-200"
-                  >Contraseña</label
-                >
-              </div>
+            <mat-form-field appearance="outline">
+              <mat-label for="password">Contraseña</mat-label>
 
               <input
-                id="password"
+                matInput
                 formControlName="password"
                 type="password"
-                placeholder="Ingrese su contraseña"
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
               />
-            </div>
-          </form>
-
-          <div class="mt-6">
+            </mat-form-field>
             <button
-              (click)="this.goToTestPsicologico()"
-              class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50"
+              type="submit"
+              mat-raised-button
+              color="primary"
+              [disabled]="this.userForm.invalid"
             >
               Ingrese
             </button>
           </div>
-        </div>
+        </form>
       </div>
     </div>
   </div>
