--- a/angularapp/src/app/modules/admin/dashboards/evaluation/evaluation.component.html
+++ b/angularapp/src/app/modules/admin/dashboards/evaluation/evaluation.component.html
@@ -36,7 +36,7 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-left'"
                         ></mat-icon>
-                        <span class="ml-1">Back</span>
+                        <span class="ml-1">Regresar</span>
                     </a>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <h2
                     class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate"
                 >
-                    Page heading
+                    Evaluación
                 </h2>
             </div>
         </div>
