--- a/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
+++ b/angularapp/src/app/modules/admin/dashboards/reports/classroom-report/classroom-report.component.html
@@ -222,7 +222,7 @@
                 *ngIf="selectedScales.length == 0"
                 class="text-center py-4 font-light text-gray-300"
             >
-                Seleccione un formulario
+                {{dataInfo}}
             </div>
         </div>
     </div>
